Solve flex layout problem and modify importing method of main.scss file.

--- a/landing_page/src/sass/base/_utilities.scss
+++ b/landing_page/src/sass/base/_utilities.scss
@@ -1,5 +1,10 @@
 @use "../abstracts"as *;
 
+// This unused classes will remove in production mode with purgecss
+.purple {
+    background-color: $purple;
+}
+
 // <---------------------------- WHITE SPACING ------------------------------->#
 @each $s-size,
 $s-value in $spacing-sizes {
